--- a/app/views/admin/categorie_produits/_form.html.erb
+++ b/app/views/admin/categorie_produits/_form.html.erb
@@ -16,6 +16,11 @@
     <%= custom_form_elements(form, 
       [:nom, :text_field], [:texte_annonce, :text_area], [:label, :text_field],  [:service, :check_box]) %>
 
+    <div class="input-group mb-1">
+      <%= form.label :image_principale, class:"input-group-text label-with-format" %>
+      <%= form.file_field :image1, class:"form-control m-1 p-1" %>
+    </div>
+    
     <%= custom_submit_button(form) %>
 
   <% end %>
