--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,6 +35,10 @@
     color:rgb(208, 77, 123);
  }
 
+ .bg-brand-colored{
+    background-color:rgb(208, 77, 123);
+}
+
  .page-max-widthed{
     width: 100%;
     max-width: 1000px;
