--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -21,7 +21,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="pb-4">
     <%= render "public/shared/navbar" %>
 
     <div class="m-0 p-0">
