--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -1,33 +1,34 @@
+<div class="fixed-bottom px-1 d-flex gap-2 bg-light">
+    <% if user_signed_in? %>
+        <div class="container-fluid mt-4 d-flex justify-content-end">
+            <%= button_to destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "text-danger d-flex align-items-center" do %>
+                <i class="bi bi-box-arrow-left me-1"></i>
+                <span class="fw-bold"><%= current_user.role %> </span>
+            <% end %>
+        </div>
 
-<% if user_signed_in? %>
-    <div class="container-fluid mt-4 d-flex justify-content-end">
-        <%= button_to destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-sm btn-danger d-flex align-items-center" do %>
-            <i class="bi bi-box-arrow-left me-1"></i>
-            <span class="fw-bold"><%= current_user.role %> </span>
+    <% elsif current_admin_user %>
+        <div class="container-fluid mt-4 d-flex justify-content-end">
+            <%= button_to destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "text-danger d-flex align-items-center" do %>
+                <i class="bi bi-box-arrow-left me-1"></i>
+                <span class="fw-bold"><%= current_admin_user.role %> </span>
+            <% end %>
+        </div>
+    <% else %>
+
+        <%= link_to new_user_session_path, class: "text-warning" do %>
+            <i class="bi bi-person-lock"></i>
+            <span class="fw-bold">Connexion</span>
         <% end %>
-    </div>
 
-<% elsif current_admin_user %>
-    <div class="container-fluid mt-4 d-flex justify-content-end">
-        <%= button_to destroy_admin_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-sm btn-danger d-flex align-items-center" do %>
-            <i class="bi bi-box-arrow-left me-1"></i>
-            <span class="fw-bold"><%= current_admin_user.role %> </span>
+        <%= link_to new_user_registration_path, class: "text-primary" do %>
+            <i class="bi bi-person-add"></i>
+            <span class="fw-bold">Nouveau</span>
         <% end %>
-    </div>
-<% else %>
 
-    <%= link_to new_user_session_path, class: "btn btn-sm btn-outline-warning" do %>
-        <i class="bi bi-person-lock"></i>
-        <span class="fw-bold">Connexion</span>
+
     <% end %>
 
-    <%= link_to new_user_registration_path, class: "btn btn-sm btn-outline-primary" do %>
-        <i class="bi bi-person-add"></i>
-        <span class="fw-bold">Nouveau</span>
-    <% end %>
-
-
-<% end %>
-
-<%#= link_to "admin", admin_home_admin_path, class: "btn btn-sm btn-dark" %>
-<%= link_to "admin", admin_root_url(subdomain: "admin"), class: "btn btn-sm btn-dark" %>
+    <%#= link_to "admin", admin_home_admin_path, class: "btn btn-sm btn-dark" %>
+    <%= link_to "admin", admin_root_url(subdomain: "admin"), class: "fw-bold text-dark" %>
+</div>
