--- a/app/views/admin/home_admin/demande_connexion.html.erb
+++ b/app/views/admin/home_admin/demande_connexion.html.erb
@@ -8,13 +8,13 @@
 
     <% unless current_admin_user.present? %>
 
-      <%= link_to new_admin_user_session_path, class: "btn btn-warning m-1 p-2 rounded-pill" do %>
+      <%= link_to new_admin_user_session_url(subdomain: "admin"), class: "btn btn-warning m-1 p-2 rounded-pill" do %>
           <i class="bi bi-person-lock"></i>
           <span class="ms-1 fw-bold">Connexion</span>
       <% end %>
 
 
-      <%= link_to new_admin_user_registration_path, class: "btn btn-primary m-1 p-2 rounded-pill" do %>
+      <%= link_to new_admin_user_registration_url(subdomain: "admin"), class: "btn btn-primary m-1 p-2 rounded-pill" do %>
         <i class="bi bi-person-add"></i>
         <span class="ms-1 fw-bold">Nouveau</span>
       <% end %>
