--- a/app/views/admin/produits/_form.html.erb
+++ b/app/views/admin/produits/_form.html.erb
@@ -14,7 +14,7 @@
         </div>
       <% end %>
 
-      <% if produit.persisted? && produit.default_image.attached? %>
+      <% if produit.persisted? && produit.default_image %>
         <div class="container text-center p-2">
           <%= image_tag(produit.default_image, class: "img-fluid rounded") %>
         </div>
@@ -42,12 +42,12 @@
         </div>
 
         <div class="input-group mb-1">
-          <%= form.label :prixvente, "prix vente TTC", class: "input-group-text" %>
+          <%= form.label :prixvente, "Prix vente TTC", class: "input-group-text" %>
           <%= form.number_field :prixvente, step: "any", class: "form-control" %>
         </div>
 
         <div class="input-group mb-1">
-          <%= form.label :prixlocation, "prix location TTC", class: "input-group-text" %>
+          <%= form.label :prixlocation, "Prix location TTC", class: "input-group-text" %>
           <%= form.number_field :prixlocation, step: "any", class: "form-control" %>
         </div>
       
@@ -67,10 +67,12 @@
           { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
 
-        <div class="input-group mb-1">
-          <%= form.label :prixachat, "prix achat HT", class: "input-group-text" %>
-          <%= form.number_field :prixachat, class: "form-control" %>
-        </div>
+        <% if current_admin_user.admin? %>
+          <div class="input-group mb-1">
+            <%= form.label :prixachat, "Prix achat HT", class: "input-group-text" %>
+            <%= form.number_field :prixachat, step: "any", class: "form-control" %>
+          </div>
+        <% end %>
 
         <div class="input-group mb-1">
           <%= form.label :image_principale, class:"input-group-text label-with-format" %>
@@ -81,6 +83,22 @@
           <%= form.label :images, class:"input-group-text label-with-format" %>
           <%= form.file_field :images, multiple: true, class:"form-control m-1 p-1" %>
         </div>
+
+        <% if produit.images.any? %>
+          
+          <div> Images actuelles:</div>
+          <div class="mb-1">
+            <% produit.images.each do |image| %>
+              <% if image.present? %>
+                  <%= image_tag image, width: 100 %>
+
+                  <%= link_to '', delete_image_attachment_admin_produit_path(produit, image_id: image.id),
+                    class: 'btn btn-outline-danger bi bi-trash', method: :delete %>
+
+              <% end %>
+            <% end %>
+          </div>
+        <% end %>
 
         <div class="input-group mb-1">
           <%= form.label :couleur_id, class: "input-group-text" %>
