--- a/app/views/public/pages/categorie.html.erb
+++ b/app/views/public/pages/categorie.html.erb
@@ -7,38 +7,42 @@
   </div>
 </div>
 
-<div class="container-fluid mt-4">
-    <h2>
-        <%= @categorie.texte_annonce %> 
-    </h2>
-</div>
+<div class="public-main-content">
 
-<div class="container-fluid mt-4">
-    <div class="brand-colored text-uppercase">
-        Catégories
+    <div class="container-fluid mt-4">
+        <h2>
+            <%= @categorie.texte_annonce %> 
+        </h2>
     </div>
-    <div>
-        <% @categories.each do |categorie| %>
-            <%= category_with_class(categorie) %>
+
+    <div class="container-fluid mt-4">
+        <div class="brand-colored text-uppercase">
+            Catégories
+        </div>
+        <div>
+            <% @categories.each do |categorie| %>
+                <%= category_with_class(categorie) %>
+            <% end %>
+        </div>
+    </div>
+
+    <div class="container-fluid mt-4">
+        <% @tailles.each do |taille| %>
+            <%= link_to taille.nom, url_for(taille: taille), 
+                class: "badge bg-brand-colored fs-3 text-uppercase text-decoration-none" %>
         <% end %>
     </div>
-</div>
 
-<div class="container-fluid mt-4">
-    <% @tailles.each do |taille| %>
-        <%= link_to taille.nom, url_for(taille: taille), 
-            class: "badge bg-brand-colored fs-3 text-uppercase text-decoration-none" %>
-    <% end %>
-</div>
+    <div class="container-fluid mt-4 m-0">
 
-<div class="container-fluid mt-4 m-0">
+        <div class="row row-cols-1 row-cols-sm-2 g-2 p-2 m-0">
+            <% @produits_uniques.each do |produit| %>
+                <div class="col">
+                <%= card_produit(produit) %>
+                </div>
+            <% end %>
+        </div>
 
-    <div class="row row-cols-1 row-cols-sm-2 g-2 p-2 m-0">
-        <% @produits_uniques.each do |produit| %>
-            <div class="col">
-            <%= card_produit(produit) %>
-            </div>
-        <% end %>
     </div>
 
 </div>
