completer partie shop avec urls - pages basiques - renvoie des textes set par admin - form rdv etc

--- a/app/views/admin/home_admin/_blocLarge.html.erb
+++ b/app/views/admin/home_admin/_blocLarge.html.erb
@@ -19,7 +19,7 @@
     <div class= "card-body p-2 light-beige-colored text-center gap-2">
         <%= options_supplementaires_link(admin_users_path, "bi-person-circle", "Comptes", "btn-outline-primary") %>
         <%= options_supplementaires_link(admin_profiles_path, "bi-person-check", "Profiles", "btn-outline-dark") %>
-        <%= options_supplementaires_link(root_path, "bi-flag", "Marketing", "btn-outline-warning") %>
+        <%= options_supplementaires_link(admin_textes_path, "bi-flag", "Marketing", "btn-outline-warning") %>
         <%= options_supplementaires_link(admin_analyses_index_path, "bi-graph-up-arrow", "Analyses", "btn-outline-success") %>
         <%= options_supplementaires_link(admin_etiquettes_index_path, "bi-tags", "Etiquettes", "btn-outline-secondary") %>
         <%= options_supplementaires_link(admin_stock_index_path, "bi-boxes", "Stocks", "btn-outline-danger") %>
