--- a/app/views/admin/textes/_texte.html.erb
+++ b/app/views/admin/textes/_texte.html.erb
@@ -5,8 +5,24 @@
   </p>
 
   <p>
-    <strong>Content:</strong>
-      <%= texte.content %>
+    <strong>Boutique:</strong>
+    <%= texte.boutique %>
+  </p>
+
+
+  <p>
+    <strong>Contact:</strong>
+      <%= texte.contact %>
+  </p>
+
+  <p>
+    <strong>Horaire:</strong>
+      <%= texte.horaire %>
+  </p>
+
+  <p>
+    <strong>Adresse:</strong>
+      <%= texte.adresse %>
   </p>
 
 
