--- a/app/views/admin/textes/_form.html.erb
+++ b/app/views/admin/textes/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with(model: texte) do |form| %>
-  <% if texte.errors.any? %>
+ <%= form_with(model: [:admin, texte]) do |form| %>
+   <% if texte.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(texte.errors.count, "error") %> prohibited this texte from being saved:</h2>
 
@@ -11,16 +11,30 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :titre, style: "display: block" %>
-    <%= form.text_field :titre %>
+  <div class="mb-3">
+    <%= form.label :boutique, class:"input-group-text bg-dark text-light fw-bold  label-with-format mb-1" %>
+    <%= form.rich_text_area :boutique, class:"bg-light" %>
   </div>
 
-  <div>
-   <%= form.rich_text_area :content %>
+  <div class="mb-3">
+    <%= form.label :contact, class:"input-group-text bg-dark text-light fw-bold  label-with-format mb-1" %>
+    <%= form.rich_text_area :contact, class:"bg-light" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="mb-3">
+    <%= form.label :horaire, class:"input-group-text bg-dark text-light fw-bold  label-with-format mb-1" %>
+    <%= form.rich_text_area :horaire, class:"bg-light" %>
   </div>
+
+  <div class="mb-3">
+    <%= form.label :adresse, class:"input-group-text bg-dark text-light fw-bold label-with-format mb-1" %>
+    <%= form.rich_text_area :adresse, class:"bg-light" %>
+  </div>
+
+  <div class="float-end mt-2 mb-4">
+    <%= link_to "Fermer", "", data:{turbo_frame: "modal"}, 
+        class:"btn btn-sm btn-secondary" %>
+    <%= form.submit "Valider", class: "btn btn-primary btn-sm" %>
+  </div>
+  
 <% end %>
