--- a/app/views/admin/textes/edit.html.erb
+++ b/app/views/admin/textes/edit.html.erb
@@ -5,6 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Show this texte", @texte %> |
-  <%= link_to "Back to textes", textes_path %>
+  <%= link_to "Back to textes", admin_textes_path %>
 </div>
