--- a/app/views/admin/admin_parameters/index.html.erb
+++ b/app/views/admin/admin_parameters/index.html.erb
@@ -23,15 +23,25 @@
   <% end %>
 </div>
 
-<%#= button_to 'Importer Produits', admin_import_data_produits_path, method: :post, class: 'btn btn-primary' %>
+<div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
+  <%= form_with url: admin_import_data_produits_path, method: :post, local: true, multipart: true, class: "row align-items-center" do |form| %>
 
-<%= form_with url: admin_import_data_produits_path, method: :post, local: true, multipart: true do |form| %>
-  <div class="form-group">
-    <%= form.label :csv_file, "Choose CSV file to import" %>
-    <%= form.file_field :csv_file, accept: '.csv' %>
-  </div>
+    <div class="form-group input-group align-items-center justify-content-center gap-2 mb-2">
+      <%= form.label :csv_file, "Sélectionner un CSV à importer", class: "form-label" %>
+      <%= form.file_field :csv_file, accept: '.csv', class: "form-control" %>
+    </div>
 
-  <div class="form-group">
-    <%= form.submit "Import Products", class: 'btn btn-primary' %>
-  </div>
-<% end %>
+    <div class="form-group input-group align-items-center justify-content-center gap-2 mb-2">
+      <%= form.label :start_row, "Ligne de départ", class: "form-label" %>
+      <%= form.number_field :start_row, min: 1, value: 1, class: "form-control" %>
+
+      <%= form.label :end_row, "Ligne de fin", class: "form-label" %>
+      <%= form.number_field :end_row, min: 1, class: "form-control" %>
+    </div>
+
+    <div class="text-end mt-2">
+      <%= form.submit "Importer les produits", class: 'btn btn-primary btn-sm', onclick: 'return confirm("Êtes-vous sûr de vouloir importer ces produits ?")' %>
+    </div>
+
+  <% end %>
+</div>
