--- a/app/views/admin/categorie_produits/_categorie_produit.html.erb
+++ b/app/views/admin/categorie_produits/_categorie_produit.html.erb
@@ -2,18 +2,34 @@
 
   <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
 
-    <div class="d-flex flex-wrap gap-1 text-truncate">
-      <%= field_with_label("Nom:", categorie_produit.nom) %>
+    <div class="row g-0 flex-grow-1">
 
-      <%= icon_true_field_with_label("service", categorie_produit.service)  %>
+      <!-- Image Column -->
+      <div class="col-sm-2 text-center">
+        <div data-turbo="false">
+          <%= link_to image_tag(categorie_produit.default_image, class: "img-fluid"), 
+                admin_categorie_produit_path(categorie_produit) %>
+        </div>
+      </div>
 
-      <%= field_with_label("Texte:", categorie_produit.texte_annonce) %>
-      <%= field_with_label("Label:", categorie_produit.label) %>
+      <!-- Text Column -->
+      <div class="col-sm-10 d-flex flex-column ps-1">
 
+        <div class="d-flex flex-wrap gap-1 text-truncate">
+          <%= field_with_label("Nom:", categorie_produit.nom) %>
+
+          <%= icon_true_field_with_label("service", categorie_produit.service)  %>
+
+          <%= field_with_label("Texte:", categorie_produit.texte_annonce) %>
+          <%= field_with_label("Label:", categorie_produit.label) %>
+
+        </div>
+
+        <div class="mt-auto">
+          <%= links_record(categorie_produit) %>  
+        </div>
+
+      </div>
     </div>
-
-    <%= links_record(categorie_produit) %>  
-
   </div>
-
 </div>
