--- a/app/views/public/pages/categorie.html.erb
+++ b/app/views/public/pages/categorie.html.erb
@@ -1,11 +1,11 @@
-<div class="position-relative d-inline-block text-center w-100">
-  <%= image_tag(@categorie.default_image, class: "w-100", style: "object-fit: cover; height: 400px;") %>
+<!--div class="position-relative d-inline-block text-center w-100">
+  <%#= image_tag(@categorie.default_image, class: "w-100", style: "object-fit: cover; height: 400px;") %>
   <div class="container-fluid d-flex flex-column justify-content-center align-items-center position-absolute top-50 start-50 translate-middle">
     <h1 class="public-text-overlay brand-colored fs-1 mb-2 text-uppercase">
-        <%= @categorie.nom %> 
+        <%#= @categorie.nom %> 
     </h1>
   </div>
-</div>
+</div-->
 
 <div class="public-main-content">
 
@@ -26,6 +26,6 @@
         </div>
     </div>
 
-    <%= render  "taille_selected" %>
+    <%= render "taille_selected" %>
 
 </div>
