--- a/app/views/public/pages/categorie.turbo_stream.erb
+++ b/app/views/public/pages/categorie.turbo_stream.erb
@@ -1,7 +1,8 @@
 <%# produits infinite scroll pagination %>
 
 <%= turbo_stream.append :produits do %>
-    <%= render partial: "public/pages/produit", collection: @produits_uniques %>
+    <%= render partial: "public/pages/produit", 
+            collection: @produits_uniques %>
 <% end %>
 
 <% if @pagy.next.present? %>
@@ -10,7 +11,10 @@
                             src: categorie_path(format: :turbo_stream,
                             id: params[:id],
                             slug: params[:slug], 
-                            page: @pagy.next, q: params[:q]&.to_unsafe_h ) %>
+                    #        taille: params[:taille],
+                            page: @pagy.next, 
+                            q: params[:q]&.to_unsafe_h 
+        ) %>
     <% end %>
 
 <% end %>
